Fixed footer on mobile!

--- a/main.css
+++ b/main.css
@@ -25,21 +25,23 @@ h4{
 }
 
 .vegItem .imgContainer{
-	margin-left: -4%;
+	margin-left: -6%;
 	margin-top: -4%;
 	order: 1;
-	width: 60%;
-	height:18vw;
-	max-height: 260px;
+	width: 50%;
+	height:16vw;
+	max-height: 250px;
 }
 
 .vegItem .imgContainer img{
 	width: 100%;
+	z-index: 1000;
+	/*background-color: red;*/
 }
 
 .vegItem .vegInfo{
 	order: 2;
-	padding-left: 20px;
+	padding-left: 40px;
 }
 
 header{
@@ -133,17 +135,21 @@ header li:hover{
 }
 
 .stuckMainMobile{
-	margin-top: 110px;
+	margin-top: 90px;
+}
+
+footer{
+	margin-top: 60px;
+	margin-bottom: 60px;
 }
 .footer{
 	text-align: left;
-	margin-top: 60px;
-	margin-bottom: 60px;
 }
 .footer h5{
 	font-size: 2.2rem;
 	font-size: 700;
 	margin-bottom: 8px;
+	font-family: "Souvenir-medium";
 }
 
 .footer p, .footer a{
@@ -162,6 +168,19 @@ header li:hover{
 }
 
 @media (max-width: 650px) {
+	footer{
+		margin-left: 7%;
+		width: 86%;
+	}
+	.about{
+		margin-bottom: 20px;
+	}
+	.OM{
+		width: 43%;
+	}
+	.CUESA{
+		width: 43%;
+	}
 	.vegItem .imgContainer{
 		margin-left:8%;
 		margin-top: -4%;
@@ -186,6 +205,7 @@ header li:hover{
 	}
 	button{
 		font-size: 4.2rem;
+		margin-top: 4px;
 	}
 	.line{
 		width: 30px;
